--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
     <body>
         <div class="container">
             <div class="home">
-                <img src="assets/logo/logo.png" >
+                <img src="assets/logo/logo.png" alt=" delani logo">
                 <h1>WELCOME</h1>
                 <H2>TO DELANI STUDIO</H2>
                 <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
+            </div>
+            <div class="aboutus">
+                <h3>About Us</h3>
+                <p>When you work with us you are part of a team of committed collaborators. All aspects of our software development process are interactive and agile.</p>
+                <p>Our approach unifies design, development and product management to create exceptional products.</p>
+                <p>We start each project by understanding your business good, the users needs and the product requirements.</p>
+                <P>Then we help translate them into effective and elegant solutions.</P>
+            </div>
+            <div class="services">
+                <h3>SERVICES</h3>
+                <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.</p>
+                <p></p>
             </div>
         </div>
     </body>
