--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="services">
                 <h3>SERVICES</h3>
                 <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.</p>
-                <p></p>
+                <p>The outcome of this scoping session ia proposal or high-level statement of work.</p>
+                <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
             </div>
         </div>
     </body>
