--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
                 <p>The outcome of this scoping session ia proposal or high-level statement of work.</p>
                 <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
             </div>
+            <h3>WHAT WE DO</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="assets/services_icons/design_icon.png" alt="design icon">
+                    <H4>DESIGN</H4>
+                    <div class="design">
+                        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.<br>
+                        Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/services_icons/dev_icon.png" alt="development icon">
+                    <h4>DEVELOPMENT</h4>
+                    <div class="dev">
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. <br>
+                        They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/services_icons/product_icon.png" alt="product icon">
+                    <H4>PRODUCT MANAGEMENT</H4>
+                    <div class="product">
+                        <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.<br> 
+                        This iterative process allows for changes as business requirements evolve.</p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </body>
 </html>
