add ids to images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>WHAT WE DO</h3>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="assets/services_icons/design_icon.png" alt="design icon">
+                    <img src="assets/services_icons/design_icon.png" alt="design icon" id="designlogo">
                     <H4>DESIGN</H4>
                     <div class="design">
                         <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.<br>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="assets/services_icons/dev_icon.png" alt="development icon">
+                    <img src="assets/services_icons/dev_icon.png" alt="development icon" id="developmenticon">
                     <h4>DEVELOPMENT</h4>
                     <div class="dev">
                         <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. <br>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="assets/services_icons/product_icon.png" alt="product icon">
+                    <img src="assets/services_icons/product_icon.png" alt="product icon" id="producticon">
                     <H4>PRODUCT MANAGEMENT</H4>
                     <div class="product">
                         <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.<br> 
