add images to create gallery

--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
                     </div>
                 </div>
             </div>
-            
+            <h3>PORTFOLIO</h3>
+            <div class="gallery">
+                <img src="assets/portfolio/work1.jpg">
+                <img src="assets/portfolio/work2.jpg">
+                <img src="assets/portfolio/work3.jpg">
+                <img src="assets/portfolio/work4.jpg">
+                <img src="assets/portfolio/work5.jpg">
+                <img src="assets/portfolio/work6.jpg">
+                <img src="assets/portfolio/work7.jpg">
+                <img src="assets/portfolio/work8.jpg">
+            </div>
         </div>
     </body>
 </html>
