--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             </div>
             <h3>PORTFOLIO</h3>
             <div class="gallery">
-                <img src="assets/portfolio/work1.jpg">
+                <div>
+                    <img src="assets/portfolio/work1.jpg" id="work1">
+                    <div class="centered"><p>Project Name</p></div>
+                </div>
                 <img src="assets/portfolio/work2.jpg">
                 <img src="assets/portfolio/work3.jpg">
                 <img src="assets/portfolio/work4.jpg">
@@ -66,6 +69,14 @@
                 <img src="assets/portfolio/work6.jpg">
                 <img src="assets/portfolio/work7.jpg">
                 <img src="assets/portfolio/work8.jpg">
+            </div>
+            <div class="contact">
+                <h3>CONTACT US</h3>
+                <form>
+                    <input type="text" id="name" placeholder="Name...">
+                    <input type="text" id="email" placeholder="Email..."><br>
+                    <textarea id="messsage" placeholder="Your message here..."></textarea>
+                </form>
             </div>
         </div>
     </body>
