add about us styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   
   <div class="landing">
-    <img src="images/logo/logo.png" alt="logo" id="logo">
+    <img src="assets/logo/logo.png" alt="logo" id="logo">
     <h1>WELCOME</h1> 
     <h1> TO DELANI STUDIO</h1>
     <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
